[package]
name = "mm-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
rand = "0.8.5"
log = "0.4.21"
env_logger = "0.11.3"
rust-bybit = "=0.2.0"
